Nested Stacks/vpc.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: This is a template for VPC 

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - 
        Label: 
          default: "VPC CIDR"
        Parameters:
        - VpcCIDR
      - 
        Label: 
          default: "Subnet CIDR"
        Parameters:
        - SubnetCIDR


Parameters:
  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: Please enter VPC CIDR

  SubnetCIDR:
    Type: String
    Default: 10.0.1.0/24
    Description: Please enter CIDR for Subnet

Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 
        Ref: VpcCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: myVPC

  myInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: myInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId:
        Ref: myInternetGateway

  myPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 
        Ref: SubnetCIDR
      AvailabilityZone: "us-east-1a"
      Tags:
      - Key: Name
        Value: myPublicSubnet
  
  myRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: myVPC
      Tags:
      - Key: Name
        Value: myRouteTable

  myRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: myRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: myInternetGateway

  mySubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: myPublicSubnet
      RouteTableId:
        Ref: myRouteTable

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: 
        Ref: myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0


Outputs:
  myVPC:
    Description: My VPC 
    Value: 
      Ref: myVPC
  
  mySubnet:
    Description: My Subnet
    Value:
      Ref: myPublicSubnet

  mySecurityGroup:
    Description: My Security Group
    Value:
      Ref: InstanceSecurityGroup
